# python_package_tutorial

./: LICENSE  pyproject.toml  setup.cfg
src/palindrome_mhartl/: phrase.py
src/palindrome_package/: palindrome.py
tests/: test_palindrome.py  test_phrase.py
